# Project-Argus----License-Plate-Reader

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup_env.sh
analysis/: detector.py  requirements.txt  watcher.py
src/: main.cpp
